--- a/App/.gitignore
+++ b/App/.gitignore
@@ -1,6 +1,72 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/intellij+all,java,macos,visualstudiocode,gradle,node,nextjs,react
-# Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,java,macos,visualstudiocode,gradle,node,nextjs,react
+# Created by https://www.toptal.com/developers/gitignore/api/gradle,java,intellij+all,eclipse,visualstudiocode,node,nextjs,react,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=gradle,java,intellij+all,eclipse,visualstudiocode,node,nextjs,react,macos
+
+### Eclipse ###
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
+
+# CDT-specific (C/C++ Development Tooling)
+.cproject
+
+# CDT- autotools
+.autotools
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific (PHP Development Tools)
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# Tern plugin
+.tern-project
+
+# TeXlipse plugin
+.texlipse
+
+# STS (Spring Tool Suite)
+.springBeans
+
+# Code Recommenders
+.recommenders/
+
+# Annotation Processing
+.apt_generated/
+.apt_generated_test/
+
+# Scala IDE specific (Scala & Java development for Eclipse)
+.cache-main
+.scala_dependencies
+.worksheet
+
+# Uncomment this line if you wish to ignore the project description file.
+# Typically, this file would be tracked if it contains build/dependency configurations:
+#.project
+
+### Eclipse Patch ###
+# Spring Boot Tooling
+.sts4-cache/
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -353,4 +419,4 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
-# End of https://www.toptal.com/developers/gitignore/api/intellij+all,java,macos,visualstudiocode,gradle,node,nextjs,react
+# End of https://www.toptal.com/developers/gitignore/api/gradle,java,intellij+all,eclipse,visualstudiocode,node,nextjs,react,macos
