--- a/front/package.json
+++ b/front/package.json
@@ -33,19 +33,21 @@
     "create-next-app": "^12.1.6",
     "next": "^12.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.5.0",
     "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.4",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^9.1.0",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.7"
+    "tailwindcss": "^3.1.2"
   },
   "lint-staged": {
     "*.{js,jsx}": [
