--- a/App/src/main/resources/application.properties
+++ b/App/src/main/resources/application.properties
@@ -10,5 +10,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
-# server port
-#server.port=8090
+
+
+# application.properties
+# ??? ? ??? ?? ?? properties? ? ??
+
+# google login
+google.auth.url=https://oauth2.googleapis.com
+google.login.url=https://accounts.google.com
+google.redirect.uri=http://localhost:8080/google/login/redirect
+google.client.id=""
+google.secret=""
+google.auth.scope=profile,email,openid
