--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "@reach/portal": "^0.16.0",
     "create-next-app": "^12.1.6",
+    "dotenv": "^16.0.1",
+    "dotenv-webpack": "^7.1.0",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
