--- a/front/package.json
+++ b/front/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.0.1",
     "dotenv-webpack": "^7.1.0",
     "next": "^12.0.7",
+    "next-auth": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwind": "^4.0.0"
