feat : 로그인/로그아웃 및 세션 유지
@wonillin

--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@reach/portal": "^0.16.0",
     "create-next-app": "^12.1.6",
+    "dot-env": "^0.0.1",
     "dotenv": "^16.0.1",
     "dotenv-webpack": "^7.1.0",
     "next": "^12.0.7",
