--- a/front/package.json
+++ b/front/package.json
@@ -38,6 +38,7 @@
     "next-auth": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal-video": "^1.2.9",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
